@@ -1,6 +1,6 @@
 package dev.jfxde.j.util.prefs;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.prefs.Preferences;
 import java.util.prefs.PreferencesFactory;
 
@@ -17,7 +17,7 @@ public class FilePreferencesFactory implements PreferencesFactory {
     public Preferences systemRoot() {
 
         if (systemRoot == null) {
-            systemRoot = new FilePreferences(null, "", Paths.get(DEFAULT_SYSTEM_PREFERENCES), Paths.get(SYSTEM_PREFERENCES));
+            systemRoot = new FilePreferences(null, "", Path.of(DEFAULT_SYSTEM_PREFERENCES), Path.of(SYSTEM_PREFERENCES));
         }
 
         return systemRoot;
@@ -26,7 +26,7 @@ public class FilePreferencesFactory implements PreferencesFactory {
     @Override
     public Preferences userRoot() {
         if (userRoot == null) {
-            userRoot = new FilePreferences(null, "", Paths.get(DEFAULT_USER_PREFERENCES), Paths.get(USER_PREFERENCES));
+            userRoot = new FilePreferences(null, "", Path.of(DEFAULT_USER_PREFERENCES), Path.of(USER_PREFERENCES));
         }
 
         return userRoot;
